# lidar-simulator

./: ._config.yml.swp  .gitignore  README.md  install.sh  make-docs.sh  requirements.txt
docs/: 0-introduction.html  1-models.html  1.1-rectangle.html  1.2-racetrack.html  1.3-ascii_stl.html  1.3-box.html  1.4-ascii_converter.html  1.99-show_models.html  2-lidar-scan.html  2.1-lidar-scan_error.html  3-feature-extraction.html  3.1-line-fitting.html  3.2-splt-and-merge.html  3.3-line-regression.html  3.4-incremental.html  3.5-ransac.html  3.6-hough-transform.html  3.7-expectation-maximisation.html  3.8-range-histogram.html  4-localization.html  4.1-odometry.html  4.99-robocup.html  98-navigation.html  98.1-longest_distance.html  98.2-wall_follower-Copy1.html  98.3-vector_field_histogram.html  99-localization.html  99.1-amcl.html  genindex.html  intro.html  objects.inv  search.html  searchindex.js
jupyternb/: 0-introduction.ipynb  1-models.ipynb  1.1-rectangle.ipynb  1.1-square.ipynb  1.2-racetrack.ipynb  1.3-ascii_stl.ipynb  1.3-box.ipynb  1.4-ascii_converter.ipynb  1.99-show_models.ipynb  2-lidar-scan.ipynb  2-lidar-scann.ipynb  2.1-lidar-scan_error.ipynb  3-feature-extraction.ipynb  3.1-line-fitting.ipynb  3.1-longest_distance.ipynb  3.2-splt-and-merge.ipynb  3.3-line-regression.ipynb  3.4-incremental.ipynb  3.5-ransac.ipynb  3.6-hough-transform.ipynb  _toc.yml  (+19 more)
python/hough_transform/: pyproject.toml
python/hough_transform/src/HoughTransform/: hough_transform.py
python/split_and_merge/: pyproject.toml
python/split_and_merge/src/SplitAndMerge/: split_and_merge.py
(+16 files in other folders)
