[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SplitAndMerge"
version = "0.0.1"
authors = [
  { name="Horst Dumcke", email="hdumcke@marysys.com" },
]
description = "An implementation of SplitAndMerge"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hdumcke/lidar-simulator"
